# cot_faithfulness

./: README.md  pyproject.toml
data/json/: example_game_state.json
scripts/: README.md  analyze_playthrough_dataset.py  count_trace_tokens.py  create_filtered_datasets.py  create_impostor_dataset.py  create_playthrough_dataset.py  example_usage.py  requirements-analysis.txt
src/cot_faithfulness/: game_state.py  llm_prompts.py
